--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lodash": "^4.17.21",
@@ -31,7 +32,7 @@
     "postcss": "8.4.28",
     "pusher": "^5.1.3",
     "pusher-js": "^8.3.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
