--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -22,18 +21,14 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
-    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "lodash": "^4.17.21",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-cloudinary": "^4.20.0",
     "next-superjson-plugin": "^0.5.9",
     "postcss": "8.4.28",
-    "pusher": "^5.1.3",
-    "pusher-js": "^8.3.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
@@ -41,12 +36,10 @@
     "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
-    "typescript": "^5.2.2",
-    "zustand": "^4.4.1"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/lodash": "^4.14.198",
     "prisma": "^5.2.0"
   }
 }
